--- a/style.css
+++ b/style.css
@@ -70,8 +70,9 @@ header > h1{
 
 header> p {
     font-size: 30px;
-    padding-right: 13px;
-    padding-left: 13px;
+    padding-right: 11px;
+    padding-left: 11px;
+    margin-top: -15px;
 }
 
 
